# MacroPlusPlus

./: CMakeLists.txt  README.md
macros/: macro1.macl
src/: input.cpp  input.h  interpreter.cpp  interpreter.h  main.cpp  main.h  playback.cpp  playback.h  record.cpp  record.h
